# bananas-now

./: Cargo.toml  Makefile  index.html
.github/workflows/: static.yml
src/: main.rs
